fix "rainbow" rotation and prevent scrollbar from appearing

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -21,13 +21,11 @@ html, body {
   top: calc(50% - #{$size/2});
 }
 
-$wheel: 30vmin;
-
-
 .container {
   position: relative;
   width: 100vmin;
   height: 100vmin;
+  overflow: hidden;
   padding: 5%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -81,7 +79,6 @@ $wheel: 30vmin;
     &:nth-of-type(2) {
       grid-column: span 2;
       grid-row: span 2;
-      display: inline-block;
       @keyframes spin {
         0% {
           transform: rotate(0deg);
@@ -91,6 +88,8 @@ $wheel: 30vmin;
         }
       }
       animation: spin 1.2s linear infinite;
+
+      $wheel: 30vmin;
 
       .color, .color:nth-child(n+7):after {
         @include circle($wheel);
@@ -119,7 +118,7 @@ $wheel: 30vmin;
     &:nth-of-type(3) {
       grid-column: span 4;
       grid-row: span 2;
-      overflow-y: hidden;
+      overflow: hidden;
 
       div {
         position: relative;
@@ -128,18 +127,21 @@ $wheel: 30vmin;
         overflow: hidden;
         background: transparent;
         animation: rotate 3s ease-in-out;
-        @keyframes rotate {
+        transform-origin: bottom center;
+
+      @keyframes rotate {
           0% {
-            transform: translate(-150%, 50%) rotate(-90deg);
+            transform: rotate(-180deg);
           }
           100% {
-            transform: translate(0, 0) rotate(0deg);
+            transform: rotate(0deg);
           }
         }
 
         &:after {
           position: absolute;
-          box-shadow: 0 0 0 1vmin #FF3BA7,
+          box-shadow:
+          0 0 0 1vmin #FF3BA7,
           0 0 0 2vmin #CC42A2,
           0 0 0 3vmin #9f49ac,
           0 0 0 4vmin #476EAF,
@@ -151,11 +153,11 @@ $wheel: 30vmin;
           0 0 0 10vmin #FEAC00,
           0 0 0 11vmin #FF8100,
           0 0 0 12vmin #FF5800;
-          width: 65%;
-          height: 150%;
-          top: 110%;
-          transform: translate(-50%, -50%);
+          width: 60%;
+          height: 120%;
+          top: 100%;
           left: 50%;
+          transform: translate(-50%, -50%);
           content: '';
           border-radius: 50%;
         }
